JDK17 is supported